# windows-live-translator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-12-live-translator-stage1.md  2026-06-12-live-translator-stage2.md  2026-06-12-live-translator-stage3.md  2026-06-13-ui-redesign-plan.md  2026-06-15-reliability-diagnostics.md  2026-06-16-elevenlabs-voice-cloning.md  2026-06-19-logs-page-diagnostics.md  2026-06-19-voice-ux-and-translation-accuracy.md
docs/superpowers/specs/: 2026-06-12-live-translator-design.md  2026-06-15-reliability-diagnostics-design.md  2026-06-16-elevenlabs-voice-cloning-design.md  2026-06-19-logs-page-diagnostics-design.md
docs/testing/: stage1-e2e-checklist.md
scripts/: check-i18n-parity.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  live_ctrl.rs  logbus.rs  main.rs  passthrough.rs  wizard.rs
src-tauri/src/audio/: capture.rs  devices.rs  dsp.rs  ducking.rs  mod.rs  playback.rs  vad.rs
src-tauri/src/elevenlabs/: rest.rs
src-tauri/src/gemini/: live.rs  mod.rs  rest.rs  types.rs
src-tauri/src/store/: history.rs  mod.rs  secrets.rs  settings.rs
src-tauri/src/voice/: codec.rs  mod.rs  pipeline.rs
src/components/: ApiKeyField.tsx  Banner.tsx  Header.tsx  Icons.tsx  LangPairPill.tsx  LanguagePair.tsx  LevelMeter.tsx  ScreenShell.tsx  SetupControls.tsx  Sidebar.tsx  TranscriptFeed.tsx  VoiceCard.tsx
src/components/__tests__/: LevelMeter.test.ts
src/i18n/: en.json  index.ts  ru.json
src/lib/: echo.ts  format.ts  history.ts  ipc.ts  languages.ts  liveStart.ts  logs.ts  transcript.ts  voice.ts  wizard.ts
src/lib/__tests__/: echo.test.ts  history.test.ts  liveStart.test.ts  logs.test.ts  transcript.test.ts  voice.test.ts  wizard.test.ts
src/screens/: HelpScreen.tsx  HistoryScreen.tsx  LiveScreen.tsx  LogsScreen.tsx  SettingsScreen.tsx  VoiceScreen.tsx  WizardScreen.tsx
src/screens/__tests__/: render-smoke.test.tsx  settings.test.ts
src/stores/: app.ts
src/stores/__tests__/: app.test.ts
