[package]
name = "live-translator"
version = "0.1.0"
description = "Live Translator - Windows real-time call translator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "live_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` enables the `asset:` custom protocol used to play voice files
# from app-data via `convertFileSrc` (scope set in tauri.conf.json).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"
base64 = "0.22.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
crossbeam-channel = "0.5.15"
tempfile = "3.27.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "deflate64", "bzip2", "zstd", "aes-crypto", "lzma", "ppmd"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
# PINNED: keyring v4 pulls turso -> tracing-appender -> time, conflicting with the time pin below; unpin when keyring v4 drops that chain
keyring = { version = "3.6.1", features = ["windows-native"] }
rubato = "3.0.0"
wasapi = "0.23.0"
windows = { version = "0.62.2", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell"] }
tokio-util = "0.7.18"
# PINNED: time 0.3.48 has an E0119 coherence regression (time-rs/time#783) breaking tauri 2.11; unpin when a fixed time release ships
time = { version = "=0.3.47", features = ["macros", "formatting", "parsing", "local-offset", "serde-human-readable"] }
# Opus voice codec. PINNED at 0.2 because it resolves audiopus_sys 0.1.8, which
# builds libopus WITHOUT cmake; 0.3 pulls audiopus_sys 0.2.x which requires cmake
# (not installed on the build machine). Do not bump to 0.3 without cmake.
audiopus = "0.2"
# Pure-Rust Ogg page framing (PacketWriter); avoids hand-rolling page CRCs.
ogg = "0.9"
# Best-effort media duration probing. Defaults cover wav/flac/ogg/vorbis/pcm;
# add mp3 + isomp4 (m4a/aac) explicitly for the formats voice messages may use.
symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
# Bundled SQLite — no system library dependency required
rusqlite = { version = "0.32", features = ["bundled"] }
# Native drag-out (CrabNebula): start an OS drag of the translated .ogg into
# WhatsApp etc. JS side is `@crabnebula/tauri-plugin-drag`.
tauri-plugin-drag = "2.1.1"
# Native save dialog for "Сохранить как". JS side is `@tauri-apps/plugin-dialog`.
tauri-plugin-dialog = "2.7.1"
# WAV writer: the recording pipeline writes a 16 kHz mono PCM16 WAV (the mime
# Gemini always accepts) before sending it for transcription. Used in tests too.
hound = "3.5.1"

